--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -10,7 +10,14 @@
     margin: 0;
     padding: 0;
 }
-
+.meals-loading{
+    text-align: center;
+    color: white;
+}
+.meals-error{
+    text-align: center;
+    color: red;
+}
 @keyframes meals-appear {
     from {
         opacity: 0;
