--- a/src/components/Cart/Checkout.module.css
+++ b/src/components/Cart/Checkout.module.css
@@ -1,7 +1,7 @@
 .form {
     margin: 1rem 0;
-    height: 19rem;
-    overflow: scroll;
+    height: 10rem;
+    overflow-y: scroll;
 }
 
 .control {
